@@ -17,6 +17,7 @@
 package org.graylog.integrations.pagerduty.client;
 
 import com.google.common.collect.ImmutableList;
+import jakarta.inject.Inject;
 import org.apache.commons.lang3.StringUtils;
 import org.graylog.events.notifications.EventNotificationContext;
 import org.graylog.events.notifications.EventNotificationModelData;
@@ -29,11 +30,11 @@ import org.graylog.integrations.pagerduty.dto.PagerDutyMessage;
 import org.graylog2.plugin.MessageSummary;
 import org.graylog2.plugin.streams.Stream;
 import org.graylog2.streams.StreamService;
-
-import jakarta.inject.Inject;
+import org.graylog2.web.customization.CustomizationConfig;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -55,11 +56,14 @@ public class MessageFactory {
 
     private final StreamService streamService;
     private final EventNotificationService eventNotificationService;
+    private final CustomizationConfig customizationConfig;
 
     @Inject
-    MessageFactory(StreamService streamService, EventNotificationService eventNotificationService) {
+    MessageFactory(StreamService streamService, EventNotificationService eventNotificationService,
+                   CustomizationConfig customizationConfig) {
         this.streamService = streamService;
         this.eventNotificationService = eventNotificationService;
+        this.customizationConfig = customizationConfig;
     }
 
     public PagerDutyMessage createTriggerMessage(EventNotificationContext ctx) {
@@ -90,7 +94,7 @@ public class MessageFactory {
 
         Map<String, String> payload = new HashMap<String, String>();
         payload.put("summary", modelData.event().message());
-        payload.put("source", "Graylog:" + modelData.event().sourceStreams());
+        payload.put("source", customizationConfig.productName() + ":" + modelData.event().sourceStreams());
         payload.put("severity", eventPriority);
         payload.put("timestamp", modelData.event().eventTimestamp().toString());
         payload.put("component", "GraylogAlerts");
@@ -121,8 +125,8 @@ public class MessageFactory {
             }
         }
         try {
-            return new Link(new URL(streamUrl), stream.getTitle());
-        } catch (MalformedURLException e) {
+            return new Link(new URI(streamUrl).toURL(), stream.getTitle());
+        } catch (URISyntaxException | MalformedURLException e) {
             throw new IllegalStateException("Error when building the stream link URL.", e);
         }
     }
